--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -9,7 +9,7 @@ Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
 Environment="PATH=__ENV_PATH__"
 Environment="NODE_ENV=production"
-ExecStart=__YNH_NODE__ run
+ExecStart=ExecStart=__YNH_NPM__ run debug
 Restart=on-failure
 RestartSec=5
 StartLimitInterval=60s
